src/components/page/YourPagesSidebar/YourPagesSidebar.module.scss
@import "../../..//styles/partial/components/scrollbar";

.your__pages__sidebar {
	padding: 2rem 1.5rem;
	border-bottom: solid 1px var(--outline);
	max-height: 50vh;

	& .your__pages__sidebar_list {
		max-height: 45vh;
		overflow-y: auto;
		padding-right: 1rem;
		list-style: none;
		padding: 0;

		@include scrollbar;

		li {
			font-size: 1.4rem;
		}
	}

	h3 {
		font-size: 2rem;
		font-weight: 700;
	}

	h4 {
		margin-bottom: 0.5rem;
	}

	span {
		padding: 0 0.25rem;
		font-size: 1.5rem;
		font-weight: regular;
		opacity: 0.3;
	}

	a {
		display: block;
		font-size: 1.4rem;
		border-radius: 0.5rem;
	}
}

.card_head_container {
	display: flex;
	justify-content: space-between;
	align-items: center;

	margin-bottom: 1rem;
}

.create_page_url {
	transition: all 0.2s ease-in-out;
	padding: 0.75rem;
	opacity: 0.65;

	&:hover {
		background: var(--outline);
		opacity: 1;
	}
}

